syntax = "proto3";

package rates;
option go_package = "usdt-rate-service/internal/pb";

message GetRatesRequest {
  string market = 1; 
}

message Rate {
  double askPrice = 1;
  double bidPrice = 2;
  int64 timestamp = 3;
}

message GetRatesResponse {
  Rate rate = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}

service RatesService {
  rpc GetRates(GetRatesRequest) returns (GetRatesResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}
